[package]
name = "zula-core"
version = "4.0.0"
edition = "2021"
description = "core shell object of zula"
license = "MIT OR Apache-2.0"
repository = "https://github.com/JamieH01/zula-core"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "2.0.1"
dirs = "5.0.1"
libloading = "0.8.0"
